# learn-mamba

./: .gitignore  README.md  config.py  dataset.py  infer.py  pyproject.toml  train.py
config/: train.yaml  train_mid.yaml
models/: embedding.py  lm_head.py  mamba.py  model.py  selective_ssm.py  swish.py
tests/: conftest.py  test_config.py  test_infer.py  test_mamba.py  test_plot.py  test_selective_ssm.py  test_train.py
utils/: plot.py
