[project]
name = "learn-mamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beartype>=0.22.9",
    "datasets>=4.8.5",
    "huggingface-hub>=1.16.1",
    "jaxtyping>=0.3.10",
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers>=4.57.0",
    "typing>=3.10.0.0",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]
cu128 = [
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 128
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["TC"]
ignore = [
    "F722", # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=models,utils,beartype.beartype"
pythonpath = ["."]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
